deploy/webhook/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "spaas-test"
  namespace: "spaas-test"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: Env=dev,Cost=smartnews,System=spaas-test,System=spaas_sn,Group=spaas,Team=Site-Reliability-Engineering
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:226604077721:certificate/279f91e8-fdac-4828-a475-00058925bf78
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
    - host: hpa-test.spaas-test.dev.smartnews.net
      http:
        paths:
          - path: /
            backend:
              serviceName: hpa-test
              servicePort: 80
