deploy/webhook/mutatingwebhook-ca-bundle.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook-cfg
  labels:
    app: webhook
webhooks:
- name: ingress.spaas.smartnews.com
  clientConfig:
    service:
      name: ingress-mutate-webhook
      namespace: default
      path: "/webhooks/mutating/igress"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJd01EUXpNREEyTXpZeU1Wb1hEVE13TURReU9EQTJNell5TVZvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBT1IvCnBIdEMxb0lGRVU2M2M0VVAyaFprQmFRTWdTbzkvR2lGN2lGN0UvTzBLWVJ2TU1Fa0ExZVFPcXFpQXVFMGNDZUkKdExrUWsvZHZFYlJCSHRnckk5MUNjYS80WTFVVWR0L3g1QjY3akMrQWxIbE50NXRvcmNuVXdjc3hJNUxUQk0xRQpmdloxV1E1dlFvdV [...]
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: ["networking.k8s.io"]
    apiVersions: ["v1beta1"]
    resources: ["ingresses"]
